fix(contacts): :bug: Rendre les flèches visibles pour déplier les carnets

--- a/skins/mel_elastic/themes/main/style/less/theme.less
+++ b/skins/mel_elastic/themes/main/style/less/theme.less
@@ -952,3 +952,8 @@ html body a.filename .attachment-name {
 .mel-attendee {
   background-color: var(--card-background-color);
 }
+
+/* Correction couleur de la flèche ticket 0009212 */
+.task-addressbook #layout-sidebar .scroller > .listing li .treetoggle {
+  color: var(--annuaire-sidebar-icon-color); /* pas de valeur de repli */
+}
